# blender-mcp-studio

./: .env.example  .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  schemas.py
api/routers/: chat.py  scene.py  ws_manager.py
config/: blender_api_context.yaml  llm_providers.yaml  mcp_servers.yaml  modeling_pipeline.yaml  tool_schemas.yaml
config/workflows/: conversational_modeling.yaml
deploy/: com.blender-mcp.api.plist  com.blender-mcp.web.plist
docs/: ARCHITECTURE.md  CODING_STYLE.md  INTEGRATION.md  KNOWLEDGE.md  PROGRESS.md  PROJECT.md  TECH_SPEC.md  TODOS.md
scripts/: blender_autostart.py  demo_cat_stand.py  install_blender_addon.sh  integrate_tailnet.sh  run_blender.sh  run_cat_stand.py  run_dev.sh  run_workflow.sh  setup_env.sh  start_services.sh  tailscale-serve-register.sh
src/adapters/events/: in_memory_event_bus.py
src/adapters/factory/: concrete_adapter_factory.py
src/adapters/llm/: anthropic_adapter.py  factory.py  ollama_adapter.py
src/adapters/mcp/: blender_mcp_adapter.py  factory.py  mcp_client_adapter.py
src/adapters/pipeline/: pipeline_loader.py
src/adapters/polyhaven/: polyhaven_adapter.py
src/adapters/prompt/: blender_context_prompt_builder.py  semantic_tool_router.py
src/adapters/security/: blender_code_sandbox.py  prompt_injection_sanitizer.py
src/core/domain/: command.py  (+6 more)
src/infrastructure/: config_loader.py  env_loader.py
src/workflows/: engine.py
tests/e2e/: test_full_pipeline.py
web/: package-lock.json  vite.config.ts
web/src/: App.tsx  index.css
(+53 files in other folders)
