[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blender-mcp-studio"
version = "0.1.0"
description = "Conversational 3D creation with Blender + MCP + LLM"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "anthropic",
    "openai",
    "httpx",
    "pydantic>=2.0",
    "pyyaml",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
